--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,3 +6,10 @@ linter:
     prefer_single_quotes: true
     avoid_function_literals_in_foreach_calls: false
     always_declare_return_types: false
+    unnecessary_new: true
+    avoid_empty_else: true
+    avoid_unused_constructor_parameters: true
+    avoid_unused_parameters: true
+    no_empty_block: false
+    empty_catches: true
+    avoid_relative_lib_imports: true
